--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div class="profile__edit-form" id="popup">
             <button class="profile__edit-form-close-icon" onclick="toggle()"></button>
             <p class="profile__edit-form-text">Редактировать профиль</p>
-            <input type="text" class="profile__edit-form-first-field"></input>
-            <input type="text" class="profile__edit-form-second-field"></input>
+            <input type="text" class="profile__edit-form-first-field">
+            <input type="text" class="profile__edit-form-second-field">
             <button type="submit" class="profile__edit-form-submit" onclick="toggle()">Сохранить</button>
           </div>
         </div>
