--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
       <div class="element__card">
         <img class="element__photo" src="" alt="">
         <div class="element__button-container">
-          <button type="button" class="element__trash-button">
+          <button type="button" class="element__trash-button"></button>
         </div>
         <div class="element__text">
           <p class="element__place"></p>
           <button type="button" class="element__like-button"></button>
         </div>
       </div>
+    </div>
   </template>
 
   <div class="edit-form-overlay">
